# 971-Robot-Code

./: .bazelignore  .bazelrc  .clang-format  .gitattributes  .gitignore  .prettierrc.json  .travis.yml  BUILD  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  COMPATIBILITY.md  Cargo.toml  Eclipse_DeployForDebug.bat  LICENSE  LICENSE.txt  Makefile  NO_BUILD_AMD64  NO_BUILD_ROBORIO  README.md  README.txt  WORKSPACE  appveyor.yml  cpp.gradle  format-all.sh  generate_FRCUsageReporting.py  go.mod  go.sum  go_deps.bzl  jsont.c  jsont.cc  meson.build  meson_options.txt  opt_bazel_base_workspace  options.gradle  package.json  platform_mappings  pnpm-lock.yaml  pnpm-workspace.yaml  (+7 more)
bindgen/: BUILD.bazel  README.md  bindgen.bzl  repositories.bzl
bindgen/raze/: BUILD.bazel  Cargo.toml  crates.bzl
cargo/: BUILD.bazel  cargo_bootstrap.bzl  cargo_build_script.bzl  defs.bzl
cargo/cargo_build_script_runner/: bin.rs  lib.rs
cargo/private/: cargo_build_script_wrapper.bzl  cargo_utils.bzl
crate_universe/: .gitignore  BUILD.bazel  Cargo.toml  DEVELOPMENT.md  crates.bzl  docs.bzl  version.bzl
crate_universe/private/: BUILD.bazel  bootstrap_utils.bzl  common_utils.bzl  crate.bzl  crates_vendor.bzl  generate_utils.bzl  selects.bzl  splicing_utils.bzl  srcs.bzl  urls.bzl  vendor_utils.bzl
crate_universe/src/: cli.rs  config.rs  context.rs  lib.rs  lockfile.rs  main.rs  rendering.rs  splicing.rs  test.rs
crate_universe/tools/: BUILD.bazel
doc/: TODO.bazel  allwpilib_ni-libraries_tarball.sh  allwpilib_subtree.sh  building-the-code.txt  clang-3.5.ctl  codereview-directions.txt  environment_variables  frc971.conf  git-setup.txt  gyp_to_bazel.py  make_bazel_package.sh  run_gyp_to_bazel.sh  vxworks-notes.txt  wpilib-check-notes.txt  wpilib-issues.txt
doc/html/: index.html  mem_fn.html
docs/: BUILD.bazel  WORKSPACE.bazel  cargo.md  crate_universe.md  defs.md  flatten.md  index.md  providers.md  rust_analyzer.md  rust_analyzer.vm  rust_bindgen.md  rust_bindgen.vm  rust_clippy.md  rust_clippy.vm  rust_doc.md  rust_fmt.md  rust_fmt.vm  rust_proto.md  rust_proto.vm  rust_repositories.md  rust_wasm_bindgen.md  settings.md  symbols.bzl  update_docs.sh
examples/ambiguous_deps/: BUILD.bazel
examples/android/: .bazelrc  AndroidMain.java  AndroidManifest.xml  BUILD.bazel  JniShim.java  allocator_library.cc  android_link_hack.c
examples/bindgen/: BUILD.bazel
examples/cargo/: BUILD.bazel  build_script.rs
examples/crate_universe/: .bazelrc  WORKSPACE.bazel
examples/flag_locations/: BUILD.bazel
examples/ios/: .bazelrc  BUILD.bazel  main_lib.m
examples/ios_build/: BUILD.bazel  Cargo.toml  platform_mappings
examples/wasm/: BUILD.bazel
examples/zig_cross_compiling/: BUILD.bazel  WORKSPACE.bazel
frc971/imu/: ADIS16505.cc  BUILD  CMakeLists.txt  blink.c  imu_calibrator-tmpl.h  imu_calibrator.cc  imu_calibrator.h  imu_calibrator_solver.cc  imu_calibrator_solver.h  imu_calibrator_test.cc
include/: meson.build  rawrtcc.h  re_pcp.h  re_sdp.h  re_shim.h  re_tls.h
include/rawrtcc/: code.h  debug.h  message_buffer.h
include/rawrtcdc/: data_channel.h  data_transport.h  external.h  sctp_capabilities.h  sctp_redirect_transport.h  sctp_transport.h
proto/: BUILD.bazel  defs.bzl  proto.bzl  repositories.bzl  toolchain.bzl  transitive_repositories.bzl
proto/patches/: README.md
proto/prost/: defs.bzl  repositories.bzl
proto/protobuf/: repositories.bzl  toolchain.bzl
proto/raze/: crates.bzl
rust/platform/: BUILD.bazel  platform.bzl  triple.bzl  triple_mappings.bzl
rust/settings/: BUILD.bazel
rust/toolchain/: BUILD.bazel
src/: ChangeLog  ar.c  elfcompress.c  meson.build  readelf.c  stack.c
src/crc32/: meson.build
src/crc32c/: crc32c.c  meson.build  software.h  sse42.c  sse42.h
src/data_channel/: attributes.c  channel.c  channel.h  utils.c
src/data_channel_parameters/: attributes.c  parameters.c
src/data_transport/: utils.c
src/dbg/: meson.build
src/http/: meson.build
src/ice/: meson.build
src/json/: meson.build
src/lock/: meson.build
src/main/: main.c  meson.build
src/odict/: meson.build
src/pcp/: mod.mk  msg.c  payload.c  pcp.h  reply.c
src/rtmp/: meson.build
src/sctp_capabilities/: capabilities.h  meson.build
src/sctp_redirect_transport/: attributes.c  transport.c  transport.h  utils.c
src/sctp_transport/: attributes.c  transport.c  utils.c
src/shim/: mod.mk  shim.c
src/sipreg/: meson.build
src/sipsess/: meson.build
src/srtp/: meson.build
src/tcp/: meson.build
src/telev/: meson.build
src/tmr/: meson.build
src/trice/: candpair.c  chklist.c  mod.mk  rcand.c  stunsrv.c  trice.c  trice.h
src/turn/: meson.build
src/udp/: meson.build
src/uri/: meson.build
src/utils/: utils.c
src/websock/: meson.build
test/: BUILD.bazel  appveyor.yml  deps.bzl  deps_transitive.bzl  tests.gradle
test/build_env/: BUILD.bazel
test/cargo_build_script/: BUILD.bazel  build.rs  tools_exec.rs
test/cc_common_link/: BUILD.bazel  global_allocator_library.cc
test/chained_direct_deps/: BUILD.bazel
test/clippy/: BUILD.bazel  clippy_failure_test.sh
test/current_toolchain_files/: BUILD.bazel  current_toolchain_files_test.bzl  current_toolchain_files_test_runner.sh
test/dep_env/: BUILD.bazel  dep_env.bzl  read_b.rs  read_dep_dir.rs
test/extra_exec_rustc_flags/: defs.bzl
test/generated_inputs/: BUILD.bazel  lib.rs
test/linker_inputs_propagation/: BUILD.bazel
test/load_arbitrary_tool/: load_arbitrary_tool_test.bzl
test/native_deps/: BUILD.bazel  direct.cc
test/no_std/: cargo-bazel-lock.json
test/out_dir_in_tests/: BUILD.bazel
test/portable_link_flags_darwin/: api.c
test/process_wrapper/: BUILD.bazel  fake_rustc.rs  process_wrapper_tester.bzl  process_wrapper_tester.cc
test/proto/: BUILD.bazel
test/rust_analyzer/: rust_analyzer_test_runner.sh
test/rustc_env_files/: BUILD.bazel
test/rustfmt/: BUILD.bazel  rustfmt_failure_test.sh
test/versioned_dylib/: BUILD.bazel
wasm_bindgen/: BUILD.bazel  providers.bzl  repositories.bzl  wasm_bindgen.bzl
wasm_bindgen/private/: BUILD.bazel  transitions.bzl
(+8274 files in other folders)
