load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    deps = ["//cargo/private:bzl_lib"],
)

alias(
    name = "rules",
    actual = ":bzl_lib",
    deprecation = "Please use the `@rules_rust//cargo:bzl_lib` target instead",
)
