[workspace]
members = [
    "tools/cross_installer",
    "tools/urls_generator",
]

[package]
name = "cargo-bazel"
version = "0.4.0"
authors = [
    "Andre Brisco - andre.brisco@protonmail.com",
]
edition = "2018"

[features]
cargo = []
default = ["cargo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
cargo_metadata = "0.14.2"
cargo_toml = "0.11.5"
cargo-lock = "8.0.2"
cargo-platform = "0.1.2"
cfg-expr = "0.10.3"
clap = { version = "3.1.18", features = ["derive", "env"] }
crates-index = { version = "0.18.8", default-features = false }
hex = "0.4.3"
normpath = "0.3"
pathdiff = "0.2.1"
regex = "1.5.6"
semver = "1.0.10"
serde = "1.0.137"
serde_json = "1.0.81"
sha2 = "0.10.2"
tempfile = "3.3.0"
tera = "1.16.0"
textwrap = "0.15.0"
toml = "0.5.9"

[dev-dependencies]
maplit = "1"
spectral = "0.6.0"
