includes = files([
    're.h',
    're_aes.h',
    're_base64.h',
    're_bfcp.h',
    're_bitv.h',
    're_conf.h',
    're_crc32.h',
    're_dbg.h',
    're_dns.h',
    're_fmt.h',
    're_hash.h',
    're_hmac.h',
    're_httpauth.h',
    're_http.h',
    're_ice.h',
    're_jbuf.h',
    're_json.h',
    're_list.h',
    're_lock.h',
    're_main.h',
    're_mbuf.h',
    're_md5.h',
    're_mem.h',
    're_mod.h',
    're_mqueue.h',
    're_msg.h',
    're_natbd.h',
    're_net.h',
    're_odict.h',
    're_rtmp.h',
    're_rtp.h',
    're_sa.h',
    're_sdp.h',
    're_sha.h',
    're_sipevent.h',
    're_sip.h',
    're_sipreg.h',
    're_sipsess.h',
    're_srtp.h',
    're_stun.h',
    're_sys.h',
    're_tcp.h',
    're_telev.h',
    're_tls.h',
    're_tmr.h',
    're_turn.h',
    're_types.h',
    're_udp.h',
    're_uri.h',
    're_websock.h',
])
