sources = []

# Modules
subdir('aes')
subdir('base64')
subdir('bfcp')
subdir('conf')
subdir('crc32')
subdir('dbg')
subdir('dns')
subdir('fmt')
subdir('hash')
subdir('hmac')
subdir('http')
subdir('httpauth')
subdir('ice')
subdir('jbuf')
subdir('json')
subdir('list')
subdir('lock')
subdir('main')
subdir('mbuf')
subdir('md5')
subdir('mem')
subdir('mod')
subdir('mqueue')
subdir('msg')
subdir('natbd')
subdir('net')
subdir('odict')
subdir('rtmp')
subdir('rtp')
subdir('sa')
subdir('sdp')
subdir('sha')
subdir('sip')
subdir('sipevent')
subdir('sipreg')
subdir('sipsess')
subdir('srtp')
subdir('stun')
subdir('sys')
subdir('tcp')
subdir('telev')
subdir('tls')
subdir('tmr')
subdir('turn')
subdir('udp')
subdir('uri')
subdir('websock')
