load(
    "@bazel_tools//tools/build_rules:test_rules.bzl",
    "rule_test",
)

rule_test(
    name = "hello_lib_rule_test",
    generates = ["libhello_lib-683707109.rlib"],
    rule = "//test/rust:hello_lib",
)

rule_test(
    name = "hello_world_rule_test",
    generates = select({
        "//rust/platform:windows": ["hello_world.exe"],
        "//conditions:default": ["hello_world"],
    }),
    rule = "//test/rust:hello_world",
)
