[package]
name = "fake_rules_rust_bindgen_lib"
version = "0.0.1"

[lib]
path = "fake_rules_rust_bindgen_lib.rs"

[dependencies]
bindgen = "0.58.1"
libloading = "=0.6.3"

[package.metadata.raze]
genmode = "Remote"
workspace_path = "//bindgen/raze"
gen_workspace_prefix = "rules_rust_bindgen"
rust_rules_workspace_name = "rules_rust"
package_aliases_dir = "."
default_gen_buildrs = false

[package.metadata.raze.crates.bindgen.'0.58.1']
gen_buildrs = true
extra_aliased_targets = ["cargo_bin_bindgen"]

[package.metadata.raze.crates.clang-sys.'1.0.0']
gen_buildrs = true

[package.metadata.raze.crates.libloading.'0.6.3']
gen_buildrs = true

[package.metadata.raze.crates.log.'0.4.11']
additional_flags = [
    "--cfg=atomic_cas",
]
